@@ -52,6 +52,13 @@ def test_registry_locale():
 
 
 @helpers.requires_babel()
+def test_unit_format_babel():
+    ureg = UnitRegistry(fmt_locale="fr_FR")
+    volume = ureg.Unit("ml")
+    assert volume.format_babel() == "millilitre"
+
+
+@helpers.requires_babel()
 def test_no_registry_locale(sess_registry):
     ureg = sess_registry
     distance = 24.0 * ureg.meter
